--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "git@github.com:dougtq/chatserver.git",
   "author": "Douglas Alves <douglas.expalves@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./index.js",
+    "dev": "./node_modules/.bin/nodemon ./index.js"
+  },
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
